<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.projecttwo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/team_a"
                android:textSize="16sp"
                android:textColor="#1f6be9"/>

            <TextView
                android:id="@+id/show_team_a_goal_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingTop="16dp"
                android:text="@string/teama_goal"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:id="@+id/add_team_a_goal_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:onClick="addOneScoreGoalForTeamA"
                android:text="@string/teama_goal_button"
                android:textColor="#ffffff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="26dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_team_a_shoot_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:onClick="addOneScoreShootForTeamA"
                    android:text="@string/teama_shoot_button"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/show_team_a_shoot_score"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/teama_shoot"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_team_a_penalty_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:onClick="addOneScorePenaltyForTeamA"
                    android:text="@string/teama_penalty_button"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/show_team_a_penalty_score"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/teama_penalty"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_team_a_corner_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:onClick="addOneScoreCornerForTeamA"
                    android:text="@string/teama_corner_button"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/show_team_a_corner_score"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/teama_corner"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_team_a_free_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:onClick="addOneScoreFreeForTeamA"
                    android:text="@string/teama_free_button"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/show_team_a_free_score"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/teama_free"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/team_b"
                android:textSize="16sp"
                android:textColor="#1f6be9"/>

            <TextView
                android:id="@+id/show_team_b_goal_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingTop="16dp"
                android:text="@string/teamb_goal"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:id="@+id/add_team_b_goal_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:onClick="addOneScoreGoalForTeamB"
                android:text="@string/teamb_goal_button"
                android:textColor="#ffffff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="26dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/show_team_b_shoot_score"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/teamb_shoot"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/add_team_b_shoot_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:onClick="addOneScoreShootForTeamB"
                    android:text="@string/teamb_shoot_button"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/show_team_b_penalty_score"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/teamb_penalty"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/add_team_b_penalty_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:onClick="addOneScorePenaltyForTeamB"
                    android:text="@string/teamb_penalty_button"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/show_team_b_corner_score"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/teamb_corner"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/add_team_b_corner_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:onClick="addOneScoreCornerForTeamB"
                    android:text="@string/teamb_corner_button"
                    android:textColor="#ffffff" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/show_team_b_free_score"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/teamb_free"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/add_team_b_free_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:onClick="addOneScoreFreeForTeamB"
                    android:text="@string/teamb_free_button"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:onClick="resetAllScore"
        android:text="@string/reset_button"
        android:textColor="#ffffff" />

</RelativeLayout>
